Spring boot, new Entities added, +UserService