@@ -4,16 +4,16 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.support.ResourceBundleMessageSource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 
 @ControllerAdvice
 public class ExceptionControllerAdviser {
-    private static final List<String> AVAILABLE_LOCALES = Arrays.asList("en_US", "ru_RU");
+    private static final List<String> AVAILABLE_LOCALES = List.of("en_US", "ru_RU");
     private static final Locale DEFAULT_LOCALE = new Locale("en", "US");
     private final ResourceBundleMessageSource bundleMessageSource;
 
@@ -22,10 +22,16 @@ public class ExceptionControllerAdviser {
         this.bundleMessageSource = messages;
     }
 
-
     @ExceptionHandler(EntityException.class)
     public ResponseEntity<ExceptionResponse> handleEntityNotFoundException(EntityException e, Locale locale) {
         return buildErrorResponse(resolveResourceBundle(getMessageByCode(e.getErrorCode()), locale), e.getErrorCode(),
+                HttpStatus.BAD_REQUEST);
+    }
+
+    @ExceptionHandler(HttpMessageNotReadableException.class)
+    public ResponseEntity<ExceptionResponse> handleMessageNotReadableException(Locale locale) {
+        int errorCode = ExceptionCode.NOT_VALID_GIFT_CERTIFICATE_DATA.getErrorCode();
+        return buildErrorResponse(resolveResourceBundle(getMessageByCode(errorCode), locale), errorCode,
                 HttpStatus.BAD_REQUEST);
     }
 
